Only simulate click for non-repeat Enter keydown on <a>

Before CL Blink will simulate click on <a> for every Enter keydown
event, after CL it will only do it for non-repeat keydown.

Firefox and Edge has the similar issue (won't navigate when holding Enter and click), Safari doesn't have the issue.

TEST=1. Find an <a>, hold Enter, left click <a>. The link should navigate.
     2. Focus <a> using Tab key, press Enter, Ctrl+Enter, Shift+Enter.
     The link should navigate.

BUG=607361

Review-Url: https://codereview.chromium.org/1988473003
Cr-Commit-Position: refs/heads/master@{#394540}

Former-commit-id: 00b2cde9efd718d1a35f9876a2333c41021abf9d